@@ -34,6 +34,7 @@ Nikos Gorogiannis
 Reuben Rowe
 Rüdiger Ehlers
 Silien Hong
+Simon Jantsch
 Shufang Zhu
 Sonali Dutta
 Tobias Meggendorfer.
