@@ -74,6 +74,9 @@ New in spot 2.5.2.dev (not yet released)
   - Using spot.automata("cmd...|") to read just a few automata out of
     an infinite stream would not properly terminate the command.
 
+  - The is_unambiguous() check (rewritten in Spot 2.2) could mark some
+    unambiguous automata as ambiguous.
+
 New in spot 2.5.2 (2018-03-25)
 
   Bugs fixed:
